--- a/css/comercios_mapa.css
+++ b/css/comercios_mapa.css
@@ -119,6 +119,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin: 0px 20px;
+    justify-content: center;
 }
 
 #modalDesc{
