--- a/css/comercios_mapa.css
+++ b/css/comercios_mapa.css
@@ -89,7 +89,9 @@ p{
     margin-left: 10px;
     font-weight: bold;
 }
-
+.card-body{
+    font-size: 1.5em;
+}
 #product-title{
     margin-left: 10px;
 }
